--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,71 +19,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "96d61327d26c4bf29903df499e751568",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "filepath = Path(\"C:/Users/igorp/Downloads/0.3_80.00_50.00_LVIDEAL_HEX20.xplt\")\n",
-    "# filepath = Path(\"C:/Users/igornobrega/Downloads/0.3_80.00_50.00_LVIDEAL_HEX20.xplt\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create speckles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv = LV.from_file(filepath)\n",
-    "lv.identify_regions(LV_GEO_TYPES.IDEAL,\n",
-    "    apex_base_args={\"ab_ql\":0.03, \"ab_qh\":0.90},\n",
-    "    endo_epi_args={\"threshold\":85,})\n",
-    "lv.plot(\"mesh\", \n",
-    "        scalars=LV_MESH_DATA.SURFS,\n",
-    "        container=\"points\",\n",
-    "        show_edges=True,\n",
-    "        categorical=True,\n",
-    "        split_sharp_edges=True,\n",
-    "        smooth_shading=False,\n",
-    "        pretty=False,\n",
-    "        vnodes=[\n",
-    "            (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "            (LV_VIRTUAL_NODES.APEX, \"red\")\n",
-    "            ],\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Create Longitudinal Speckles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "with open('spk_args_ideal.json', 'r') as f:\n",
-    "    spks_data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lv.create_speckles_from_iterable(spks_data)"
+    "from project_heart.examples import get_lv_ideal\n",
+    "lv = get_lv_ideal()\n",
+    "lv.plot()"
    ]
   },
   {
@@ -95,29 +52,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV:Extracting volume.\n",
+      "INFO:LV:Extracting longitudinal_distance.\n",
+      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_1'\n",
+      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_2'\n",
+      "INFO:LV:Extracting radial_distance.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_DISTANCE'\n",
+      "INFO:LV:Extracting radial_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_LENGTH'\n",
+      "INFO:LV:Extracting wall_thickness.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.WALL_THICKNESS'\n",
+      "INFO:LV:Extracting longitudinal_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONG_LENGTH'\n",
+      "INFO:LV:Extracting global_longitudinal_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_LONGITUDINAL_LENGTH'\n",
+      "INFO:LV:Extracting circumferential_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.CIRC_LENGTH'\n",
+      "INFO:LV:Extracting global_circumferential_length.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH'\n",
+      "INFO:LV:Extracting angle_rotation.\n",
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.ROTATION'\n"
+     ]
+    }
+   ],
    "source": [
-    "lv.extract_geometrics({\n",
+    "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
-    "        \"longitudinal_distance\": {},\n",
-    "        \"radius\": {\n",
+    "        \"longitudinal_distance\": {\n",
+    "            \"nodesets\": {\"ENDO\", \"EPI\"},\n",
+    "            },\n",
+    "        \"radial_distance\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"approach\":\"moving_vector\",\n",
+    "            \"reduce_by\":{\"group\", \"name\"},\n",
+    "            },\n",
+    "        \"radial_length\": {\n",
+    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
+    "            \"approach\":\"moving_centers\",\n",
     "            \"reduce_by\":{\"group\", \"name\"},\n",
     "            },\n",
     "        \"wall_thickness\": {\n",
     "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"circ-6\"},\n",
     "            \"epi_spks\": {\"spk_group\":\"epi\", \"spk_collection\":\"circ-6\"},\n",
+    "            \"approach\":\"radial_distance\",\n",
     "            \"reduce_by\":{\"name\"},\n",
     "            },\n",
     "        \"longitudinal_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"long-6\"},\n",
-    "            \"reduce_by\":{\"group\", \"name\"},\n",
+    "            \"approach\":\"k_ids\",\n",
+    "            \"reduce_by\":{\"subset\"},\n",
+    "            \"merge_subset\":{\n",
+    "                    5: 0, \n",
+    "                    4: 1, \n",
+    "                    3: 2\n",
+    "                },\n",
+    "            },\n",
+    "        \"global_longitudinal_length\": {\n",
+    "            \"spks\": {\"spk_collection\":\"long-1\"},\n",
+    "            \"approach\":\"k_ids\",\n",
+    "            \"reduce_by\":{\"group\"},\n",
     "            },\n",
     "        \"circumferential_length\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
-    "            \"reduce_by\":{\"group\", \"name\"},\n",
+    "            \"reduce_by\":{\"group\"},\n",
+    "            },\n",
+    "        \"global_circumferential_length\": {\n",
+    "            \"spks\": {\"spk_collection\":\"circ-1\"},\n",
+    "            \"reduce_by\":{\"group\"},\n",
     "            },\n",
     "        \"angle_rotation\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
@@ -130,10 +138,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
+   "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
