created new spk args

--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,27 +19,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "96d61327d26c4bf29903df499e751568",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Renderer(camera=PerspectiveCamera(aspect=1.5, children=(DirectionalLight(position=(50000.000000000015, 70710.6…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_ideal\n",
-    "lv = get_lv_ideal()\n",
+    "lv = get_lv_ideal(save_spk_dict=True)\n",
+    "# lv.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from project_heart.examples import get_lv_typeA\n",
+    "lv = get_lv_typeA(save_spk_dict=True)\n",
     "lv.plot()"
    ]
   },
@@ -52,36 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:LV:Extracting volume.\n",
-      "INFO:LV:Extracting longitudinal_distance.\n",
-      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_1'\n",
-      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_2'\n",
-      "INFO:LV:Extracting radial_distance.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_DISTANCE'\n",
-      "INFO:LV:Extracting radial_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.RADIAL_LENGTH'\n",
-      "INFO:LV:Extracting wall_thickness.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.WALL_THICKNESS'\n",
-      "INFO:LV:Extracting longitudinal_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONG_LENGTH'\n",
-      "INFO:LV:Extracting global_longitudinal_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_LONGITUDINAL_LENGTH'\n",
-      "INFO:LV:Extracting circumferential_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.CIRC_LENGTH'\n",
-      "INFO:LV:Extracting global_circumferential_length.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH'\n",
-      "INFO:LV:Extracting angle_rotation.\n",
-      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.ROTATION'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
