--- a/docs/source/theory/geometrics/circumferential_length.ipynb
+++ b/docs/source/theory/geometrics/circumferential_length.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "**Definition**: Curvature length from a set of points roughtly alinged in a plane perpendicular to the longitudinal axis.\n",
     "\n",
-    "The circumferential length is calculated as the length of a curve inscribed within myocardial region along the circumferential axis. In our solution, we constructed these curves based on given speckles, thus we are essentially determining the \"[speckle length]()\". To guarantee that this metric is consistent with its definition, the normal of the plane of reference for these speckles must be parallel to the normal axis.\n",
+    "The circumferential length is calculated as the length of a curve inscribed within myocardial region along the circumferential axis. In our solution, we constructed these curves based on given speckles, thus we are essentially determining the \"[speckle length](../basic_definitions/speckles.ipynb)\". To guarantee that this metric is consistent with its definition, the normal of the plane of reference for these speckles must be parallel to the normal axis.\n",
     "\n",
     "Here is an example:"
    ]
