added interactive speckles docs (unfinished)

--- a/docs/source/theory/basic_definitions/speckles.ipynb
+++ b/docs/source/theory/basic_definitions/speckles.ipynb
@@ -35,7 +35,153 @@
     "    )\n",
     "\n",
     "sample_spk_typeA_endo = lv_typeA.get_speckles(spk_name=\"SAMPLE\", spk_group=\"endo\", spk_collection=\"SAMPLE\")[0]\n",
-    "sample_spk_typeA_epi = lv_typeA.get_speckles(spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")[0]"
+    "sample_spk_typeA_epi = lv_typeA.get_speckles(spk_name=\"SAMPLE\", spk_group=\"epi\", spk_collection=\"SAMPLE\")[0]\n",
+    "\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interactive\n",
+    "from ipywidgets import Button, HBox, VBox\n",
+    "from IPython.display import display, clear_output\n",
+    "\n",
+    "plot_clusters_wdg = widgets.Dropdown(options=[\"subsets\", \"clusters\"], description=\"categories\")\n",
+    "\n",
+    "mode_wdg = widgets.Dropdown(options=[\"longitudinal\", \"transversal\"], description=\"mode\")\n",
+    "nodeset_wdg = widgets.Dropdown(options=[\"endo\", \"epi\"], description=\"nodeset\")\n",
+    "\n",
+    "d_wdg = widgets.FloatSlider(value=2.5, min=0.0, max=8.0, description=\"d\", continuous_update=False)\n",
+    "k_wdg = widgets.FloatSlider(value=0.5, min=0.0, max=1.0, description=\"k\", continuous_update=False)\n",
+    "\n",
+    "normal_a_wdg = widgets.FloatSlider(value=0.0, min=0.0, max=360.0, description=\"a\", continuous_update=False)\n",
+    "\n",
+    "n_subsets_wdg = widgets.IntSlider(value=6, min=0, max=15, description=\"n_subsets\", continuous_update=False)\n",
+    "subset_criteria_wdg = widgets.Dropdown(value=\"z2\", options=[\"z\", \"z2\", 'angles', 'angles2', 'angles3'], description=\"subset_criteria\")\n",
+    "\n",
+    "n_clusters_wdg = widgets.IntSlider(value=6, min=0, max=60, description=\"n_clusters\", continuous_update=False)\n",
+    "cluster_criteria_wdg = widgets.Dropdown(value=\"angles3\", options=[\"z\", \"z2\", 'angles', 'angles2', 'angles3'], description=\"cluster_criteria\")\n",
+    "\n",
+    "a = VBox([plot_clusters_wdg, mode_wdg, nodeset_wdg])\n",
+    "b = VBox([d_wdg, k_wdg, normal_a_wdg])\n",
+    "c = VBox([n_subsets_wdg, subset_criteria_wdg])\n",
+    "d = VBox([n_clusters_wdg, cluster_criteria_wdg])\n",
+    "\n",
+    "controls = HBox([a, b, c, d])\n",
+    "\n",
+    "\n",
+    "def create_and_show_speckles(plot_mode, mode, nodeset, normal_a, d, k, \n",
+    "                             n_subsets, subset_criteria,\n",
+    "                             n_clusters, cluster_criteria\n",
+    "                             ):\n",
+    "    # clear_output()\n",
+    "    \n",
+    "    if mode == \"longitudinal\":\n",
+    "        a = np.radians(normal_a)\n",
+    "        normal = [np.cos(a),np.sin(a),0.0]\n",
+    "    else:\n",
+    "        normal = [0.,0.,1.]\n",
+    "    \n",
+    "    if nodeset == \"endo\":\n",
+    "        nodeset = LV_SURFS.ENDO\n",
+    "    else:\n",
+    "        nodeset = LV_SURFS.EPI\n",
+    "        \n",
+    "    # plot spkes on ideal case\n",
+    "    spk_name = \"SAMPLE-INTERACT-\" + str(nodeset) \n",
+    "    spk_name = \"-\" + str(normal)\n",
+    "    spk_name += \"-\" + str(n_subsets) + str(subset_criteria)\n",
+    "    spk_name += \"-\" +str(n_clusters) + str(cluster_criteria)\n",
+    "    \n",
+    "    spk1 = lv_ideal.create_speckles(\n",
+    "                collection=spk_name,\n",
+    "                group=spk_name,\n",
+    "                name=spk_name,\n",
+    "                from_nodeset=nodeset,\n",
+    "                # exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
+    "                d=d,\n",
+    "                k=k,\n",
+    "                normal_to=normal,\n",
+    "                n_subsets=n_subsets,\n",
+    "                subsets_criteria=subset_criteria,\n",
+    "                n_clusters=n_clusters,\n",
+    "                cluster_criteria=cluster_criteria,\n",
+    "                t=0.0,\n",
+    "                kmin=-1,\n",
+    "                kmax=-1,\n",
+    "                log_level=logging.WARN,\n",
+    "            )\n",
+    "    \n",
+    "    if plot_mode == \"subsets\":\n",
+    "        lv_ideal.plot_speckles(spk1, \n",
+    "                            cmap=\"tab20\",\n",
+    "                            point_size=300,\n",
+    "                            add_k_centers=True, \n",
+    "                            k_centers_as_line=False, \n",
+    "                            k_bins=False,\n",
+    "                            plot_kwargs=dict(notebook=True)\n",
+    "                            )\n",
+    "    else:\n",
+    "        lv_ideal.plot_speckles(spk1, \n",
+    "                            cmap=\"hot\",\n",
+    "                            point_size=300,\n",
+    "                            add_k_centers=True, \n",
+    "                            k_centers_as_line=True, \n",
+    "                            k_bins=True,\n",
+    "                            plot_kwargs=dict(notebook=True)\n",
+    "                            )\n",
+    "    \n",
+    "    # plot speckles on non-ideal case.\n",
+    "    spk2 = lv_typeA.create_speckles(\n",
+    "                collection=spk_name,\n",
+    "                group=spk_name,\n",
+    "                name=spk_name,\n",
+    "                from_nodeset=nodeset,\n",
+    "                # exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
+    "                d=d,\n",
+    "                k=k,\n",
+    "                normal_to=normal,\n",
+    "                n_subsets=n_subsets,\n",
+    "                subsets_criteria=subset_criteria,\n",
+    "                n_clusters=n_clusters,\n",
+    "                cluster_criteria=cluster_criteria,\n",
+    "                t=0.0,\n",
+    "                kmin=-1,\n",
+    "                kmax=-1,\n",
+    "                log_level=logging.WARN,\n",
+    "            )\n",
+    "    \n",
+    "    if plot_mode == \"subsets\":\n",
+    "        lv_typeA.plot_speckles(spk2, \n",
+    "                            cmap=\"tab20\",\n",
+    "                            point_size=300,\n",
+    "                            add_k_centers=True, \n",
+    "                            k_centers_as_line=False, \n",
+    "                            k_bins=False,\n",
+    "                            plot_kwargs=dict(notebook=True)\n",
+    "                            )\n",
+    "    else:\n",
+    "        lv_typeA.plot_speckles(spk2, \n",
+    "                            cmap=\"hot\",\n",
+    "                            point_size=300,\n",
+    "                            add_k_centers=True, \n",
+    "                            k_centers_as_line=True, \n",
+    "                            k_bins=True,\n",
+    "                            plot_kwargs=dict(notebook=True)\n",
+    "                            )\n",
+    "    \n",
+    "out = widgets.interactive_output(create_and_show_speckles, \n",
+    "                                 dict(\n",
+    "                                     plot_mode=plot_clusters_wdg,\n",
+    "                                    mode=mode_wdg, \n",
+    "                                    nodeset=nodeset_wdg, \n",
+    "                                    normal_a=normal_a_wdg,\n",
+    "                                    d=d_wdg, k=k_wdg, \n",
+    "                                    n_subsets=n_subsets_wdg, \n",
+    "                                    subset_criteria=subset_criteria_wdg,\n",
+    "                                    n_clusters=n_clusters_wdg, \n",
+    "                                    cluster_criteria=cluster_criteria_wdg\n",
+    "                                  ))\n",
+    "\n",
+    "def interactive_speckles():\n",
+    "    display(controls, out)"
    ]
   },
   {
@@ -58,82 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.radians(45.0)\n",
-    "normal = [np.cos(a),np.sin(a),0.0]\n",
-    "print(normal)\n",
-    "n_subsets = 6\n",
-    "_ = lv_typeA.create_speckles(\n",
-    "            collection=\"SAMPLETEST1\",\n",
-    "            group=\"epi\",\n",
-    "            name=\"SAMPLE-LONG\",\n",
-    "            from_nodeset=LV_SURFS.EPI,\n",
-    "            exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
-    "            d=2.5,\n",
-    "            k=0.5,\n",
-    "            normal_to=normal,\n",
-    "            n_subsets=n_subsets,\n",
-    "            subsets_criteria=\"z2\",\n",
-    "            cluster_criteria=\"angles3\",\n",
-    "            n_clusters=18,\n",
-    "            t=0.0,\n",
-    "            kmin=-1,\n",
-    "            kmax=0.85,\n",
-    "            log_level=logging.DEBUG,\n",
-    "        )\n",
-    "\n",
-    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE-LONG\", spk_group=\"epi\", spk_collection=\"SAMPLETEST1\")\n",
-    "\n",
-    "plotter = lv_typeA.plot_speckles(sample_spk_typeA, \n",
-    "                       cmap=\"hot\",\n",
-    "                       point_size=300,\n",
-    "                       add_k_centers=True, \n",
-    "                       k_centers_as_line=True, \n",
-    "                       k_bins=True,\n",
-    "                       )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "normal = [0,0,1]\n",
-    "n_subsets = 6\n",
-    "_ = lv_typeA.create_speckles(\n",
-    "            collection=\"SAMPLETEST3\",\n",
-    "            group=\"epi\",\n",
-    "            name=\"SAMPLE-LONG\",\n",
-    "            from_nodeset=LV_SURFS.EPI,\n",
-    "            exclude_nodeset=[LV_SURFS.BASE, LV_SURFS.ENDO],\n",
-    "            d=4.0,\n",
-    "            k=0.5,\n",
-    "            normal_to=normal,\n",
-    "            n_subsets=n_subsets,\n",
-    "            subsets_criteria=\"angles\",\n",
-    "            cluster_criteria=\"angles3\",\n",
-    "            n_clusters=18,\n",
-    "            t=0.0,\n",
-    "            kmin=-1,\n",
-    "            kmax=0.85,\n",
-    "            log_level=logging.WARN,\n",
-    "        )\n",
-    "\n",
-    "sample_spk_typeA = lv_typeA.get_speckles(spk_name=\"SAMPLE-LONG\", spk_group=\"epi\", spk_collection=\"SAMPLETEST3\")\n",
-    "\n",
-    "plotter = lv_typeA.plot_speckles(sample_spk_typeA, \n",
-    "                       cmap=\"hot\",\n",
-    "                       point_size=300,\n",
-    "                       add_k_centers=True, \n",
-    "                       k_centers_as_line=True, \n",
-    "                       k_bins=True,\n",
-    "                    #    k_center_filters=dict(\n",
-    "                    #        mfilter_ws=3, \n",
-    "                    #        sfilter_ws=5, \n",
-    "                    #        sfilter_or=1, \n",
-    "                    #        keep_first=True, \n",
-    "                    #        keep_last=True)\n",
-    "                       )"
+    "interactive_speckles()"
    ]
   },
   {
