--- a/docs/source/demos/core/tetrahedralize.ipynb
+++ b/docs/source/demos/core/tetrahedralize.ipynb
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv = LV.from_file(sample_file) \n",
-    "lv.mesh"
+    "# lv = LV.from_file(sample_file) \n",
+    "# lv.mesh"
    ]
   },
   {
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
-    "lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=500);"
+    "# %%capture\n",
+    "# lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=500);"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.plot(show_edges=True)"
+    "# lv.plot(show_edges=True)"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.mesh"
+    "# lv.mesh"
    ]
   },
   {
