--- a/docs/source/demos/core/tetrahedralize.ipynb
+++ b/docs/source/demos/core/tetrahedralize.ipynb
@@ -13,12 +13,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pathlib import Path\n",
-    "# from project_heart.lv import LV\n",
-    "# from project_heart.utils import set_jupyter_backend\n",
-    "# from project_heart.enums import *\n",
+    "from pathlib import Path\n",
+    "from project_heart.lv import LV\n",
+    "from project_heart.utils import set_jupyter_backend\n",
+    "from project_heart.enums import *\n",
     "\n",
-    "# set_jupyter_backend(\"pythreejs\")"
+    "set_jupyter_backend(\"pythreejs\")"
    ]
   },
   {
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sample_file = Path(\"../sample_files/lvsample.stl\")"
+    "sample_file = Path(\"../sample_files/lvsample.stl\")"
    ]
   },
   {
@@ -43,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv = LV.from_file(sample_file) \n",
-    "# lv.mesh"
+    "lv = LV.from_file(sample_file) \n",
+    "lv.mesh"
    ]
   },
   {
@@ -53,8 +53,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%capture\n",
-    "# lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=500);"
+    "%%capture\n",
+    "lv.tetrahedralize(backend=TETRA_BACKEND.WILDMESHING, stop_quality=500);"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv.plot(show_edges=True)"
+    "lv.plot(show_edges=True)"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv.mesh"
+    "lv.mesh"
    ]
   },
   {
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv = LV.from_file(sample_file) \n",
-    "# lv.mesh"
+    "lv = LV.from_file(sample_file) \n",
+    "lv.mesh"
    ]
   },
   {
@@ -98,8 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%capture\n",
-    "# lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=10.0, minratio=3.0)"
+    "%%capture\n",
+    "lv.tetrahedralize(backend=TETRA_BACKEND.TETGEN, order=1, mindihedral=10.0, minratio=3.0)"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv.plot(show_edges=True)"
+    "lv.plot(show_edges=True)"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# lv.mesh"
+    "lv.mesh"
    ]
   }
  ],
