--- a/docs/source/theory/geometrics/longitudinal_length.ipynb
+++ b/docs/source/theory/geometrics/longitudinal_length.ipynb
@@ -282,12 +282,12 @@
     "    recompute=True,\n",
     "    reduce_by={\"group\"},\n",
     "    log_level=logging.WARN,\n",
-    "    line_seg_filter_kwargs=dict(\n",
-    "                           mfilter_ws=3, \n",
-    "                           sfilter_ws=9, \n",
-    "                           sfilter_or=1, \n",
-    "                           keep_first=True, \n",
-    "                           keep_last=True)\n",
+    "    # line_seg_filter_kwargs=dict(\n",
+    "    #                        mfilter_ws=3, \n",
+    "    #                        sfilter_ws=9, \n",
+    "    #                        sfilter_or=1, \n",
+    "    #                        keep_first=True, \n",
+    "    #                        keep_last=True) \n",
     "    )\n",
     "lv_typeA.plot_metric(lv_typeA.STATES.GLOBAL_LONGITUDINAL_LENGTH, \n",
     "    from_ts=0.0,\n",
