--- a/docs/source/theory/basic_definitions/speckles.ipynb
+++ b/docs/source/theory/basic_definitions/speckles.ipynb
@@ -31,7 +31,8 @@
     "lv_ideal = get_lv_ideal(Path(\"../../_static/sample_files/ideal_linear_pressure_increase copy.xplt\"))\n",
     "lv_typeA = get_lv_typeA(\n",
     "    Path(\"../../_static/sample_files/lv_typeA_hex.vtk\"),\n",
-    "    Path(\"../../_static/sample_files/sample_displacement_lv_typeA_hex_states_linear_press_incr.pbz2\")\n",
+    "    Path(\"../../_static/sample_files/sample_displacement_lv_typeA_hex_states_linear_press_incr.pbz2\"),\n",
+    "    save_spk_dict=False\n",
     "    )\n",
     "\n",
     "sample_spk_typeA_endo = lv_typeA.get_speckles(spk_name=\"SAMPLE\", spk_group=\"endo\", spk_collection=\"SAMPLE\")[0]\n",
@@ -49,9 +50,12 @@
     "nodeset_wdg = widgets.Dropdown(options=[\"endo\", \"epi\"], description=\"nodeset\")\n",
     "\n",
     "d_wdg = widgets.FloatSlider(value=2.5, min=0.0, max=8.0, description=\"d\", continuous_update=False)\n",
-    "k_wdg = widgets.FloatSlider(value=0.5, min=0.0, max=1.0, description=\"k\", continuous_update=False)\n",
+    "k_wdg = widgets.FloatSlider(value=0.5, min=0.0, max=1.0, step=0.05, description=\"k\", continuous_update=False)\n",
     "\n",
-    "normal_a_wdg = widgets.FloatSlider(value=0.0, min=0.0, max=360.0, description=\"a\", continuous_update=False)\n",
+    "k_min_wdg = widgets.FloatSlider(value=-1, min=-1.0, max=1.0, step=0.05, description=\"k_min\", continuous_update=False)\n",
+    "k_max_wdg = widgets.FloatSlider(value=-1, min=-1.0, max=1.0, step=0.05, description=\"k_max\", continuous_update=False)\n",
+    "\n",
+    "normal_a_wdg = widgets.FloatSlider(value=0.0, min=0.0, max=180.0, description=\"a\", continuous_update=False)\n",
     "\n",
     "n_subsets_wdg = widgets.IntSlider(value=6, min=0, max=15, description=\"n_subsets\", continuous_update=False)\n",
     "subset_criteria_wdg = widgets.Dropdown(value=\"z2\", options=[\"z\", \"z2\", 'angles', 'angles2', 'angles3'], description=\"subset_criteria\")\n",
@@ -61,15 +65,15 @@
     "\n",
     "a = VBox([plot_clusters_wdg, mode_wdg, nodeset_wdg])\n",
     "b = VBox([d_wdg, k_wdg, normal_a_wdg])\n",
-    "c = VBox([n_subsets_wdg, subset_criteria_wdg])\n",
-    "d = VBox([n_clusters_wdg, cluster_criteria_wdg])\n",
+    "c = VBox([n_subsets_wdg, subset_criteria_wdg, k_min_wdg])\n",
+    "d = VBox([n_clusters_wdg, cluster_criteria_wdg, k_max_wdg])\n",
     "\n",
     "controls = HBox([a, b, c, d])\n",
     "\n",
-    "\n",
     "def create_and_show_speckles(plot_mode, mode, nodeset, normal_a, d, k, \n",
     "                             n_subsets, subset_criteria,\n",
-    "                             n_clusters, cluster_criteria\n",
+    "                             n_clusters, cluster_criteria,\n",
+    "                             k_min, k_max\n",
     "                             ):\n",
     "    # clear_output()\n",
     "    \n",
@@ -104,8 +108,8 @@
     "                n_clusters=n_clusters,\n",
     "                cluster_criteria=cluster_criteria,\n",
     "                t=0.0,\n",
-    "                kmin=-1,\n",
-    "                kmax=-1,\n",
+    "                kmin=k_min,\n",
+    "                kmax=k_max,\n",
     "                log_level=logging.WARN,\n",
     "            )\n",
     "    \n",
@@ -143,8 +147,8 @@
     "                n_clusters=n_clusters,\n",
     "                cluster_criteria=cluster_criteria,\n",
     "                t=0.0,\n",
-    "                kmin=-1,\n",
-    "                kmax=-1,\n",
+    "                kmin=k_min,\n",
+    "                kmax=k_max,\n",
     "                log_level=logging.WARN,\n",
     "            )\n",
     "    \n",
@@ -167,7 +171,8 @@
     "                            plot_kwargs=dict(notebook=True)\n",
     "                            )\n",
     "    \n",
-    "out = widgets.interactive_output(create_and_show_speckles, \n",
+    "def interactive_speckles():\n",
+    "    out = widgets.interactive_output(create_and_show_speckles, \n",
     "                                 dict(\n",
     "                                     plot_mode=plot_clusters_wdg,\n",
     "                                    mode=mode_wdg, \n",
@@ -177,10 +182,10 @@
     "                                    n_subsets=n_subsets_wdg, \n",
     "                                    subset_criteria=subset_criteria_wdg,\n",
     "                                    n_clusters=n_clusters_wdg, \n",
-    "                                    cluster_criteria=cluster_criteria_wdg\n",
+    "                                    cluster_criteria=cluster_criteria_wdg,\n",
+    "                                    k_min=k_min_wdg,\n",
+    "                                    k_max=k_max_wdg,\n",
     "                                  ))\n",
-    "\n",
-    "def interactive_speckles():\n",
     "    display(controls, out)"
    ]
   },
