checking for new LS approach with extract method

--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -55,7 +55,11 @@
     "df = lv.extract_geometrics({\n",
     "        \"volume\":{},\n",
     "        \"longitudinal_distance\": {\n",
-    "            \"nodesets\": {\"ENDO\", \"EPI\"},\n",
+    "            \"apex_spks\": {\"spk_name\":\"apex\", \"spk_collection\":\"LA\"},\n",
+    "            \"base_spks\": {\"spk_name\":\"base\", \"spk_collection\":\"LA\"},\n",
+    "            \"approach\":\"centroid\", \n",
+    "            \"use_axis_aligment\":False,\n",
+    "            \"reduce_by\":[\"group\"]\n",
     "            },\n",
     "        \"radial_distance\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
