updated extract geometrics to include speckle approach for LD

--- a/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_ideal.ipynb
@@ -23,9 +23,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from project_heart.examples import get_lv_ideal\n",
-    "lv = get_lv_ideal(save_spk_dict=True)\n",
-    "# lv.plot()"
+    "# from project_heart.examples import get_lv_ideal\n",
+    "# lv = get_lv_ideal(save_spk_dict=True)\n",
+    "# # lv.plot()"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
     "lv = get_lv_typeA(save_spk_dict=True)\n",
-    "lv.plot()"
+    "# lv.plot()"
    ]
   },
   {
@@ -59,7 +59,7 @@
     "            \"base_spks\": {\"spk_name\":\"base\", \"spk_collection\":\"LA\"},\n",
     "            \"approach\":\"centroid\", \n",
     "            \"use_axis_aligment\":False,\n",
-    "            \"reduce_by\":[\"group\"]\n",
+    "            \"reduce_by\":{\"group\"}\n",
     "            },\n",
     "        \"radial_distance\": {\n",
     "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
@@ -106,6 +106,15 @@
     "            }\n",
     "        }\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
    ]
   }
  ],
