--- a/notebooks/lv/tests/longitudinal_distance.ipynb
+++ b/notebooks/lv/tests/longitudinal_distance.ipynb
@@ -156,9 +156,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV.BaseMetricsComputations:Computing metric 'LV_STATES.LONGITUDINAL_DISTANCE' using nodesets: {<LV_SURFS.ENDO: 1>, <LV_SURFS.EPI: 2>}\n",
+      "DEBUG:LV.BaseMetricsComputations:Computing longitudinal distance for nodeset: '1' with approach: 'estimate_apex_base'.\n",
+      "DEBUG:LV.BaseMetricsComputations:Using default base region for base centroid estimation: 23\n",
+      "DEBUG:LV.BaseMetricsComputations:[0] --> base: [2.34924 4.06628 84.85166], apex: [1.34526 -0.20070 4.20298], dist: 80.7677146801862\n",
+      "DEBUG:LV.BaseMetricsComputations:[1] --> base: [1.54996 3.90157 84.41967], apex: [1.13285 -0.72376 4.69588], dist: 79.8589383568349\n",
+      "DEBUG:LV.BaseMetricsComputations:[2] --> base: [1.10615 3.75960 84.27781], apex: [1.03797 -1.47001 4.74885], dist: 79.7007454533599\n",
+      "DEBUG:LV.BaseMetricsComputations:[3] --> base: [1.40904 4.14930 84.13543], apex: [0.38021 -2.45026 4.37078], dist: 80.04381229304116\n",
+      "DEBUG:LV.BaseMetricsComputations:[4] --> base: [1.75487 5.34419 84.00272], apex: [2.20163 -2.71530 5.01011], dist: 79.40394666455936\n",
+      "DEBUG:LV.BaseMetricsComputations:[5] --> base: [1.93810 5.67218 84.09136], apex: [4.80074 -2.83453 5.28639], dist: 79.31444802769268\n",
+      "DEBUG:LV.BaseMetricsComputations:[6] --> base: [1.93863 5.53376 84.16232], apex: [4.91151 -3.43136 5.31505], dist: 79.41097174769143\n",
+      "DEBUG:LV.BaseMetricsComputations:[7] --> base: [1.82682 5.12732 84.07675], apex: [4.19582 -3.56498 5.16299], dist: 79.42638203810095\n",
+      "DEBUG:LV.BaseMetricsComputations:[8] --> base: [1.70198 4.74035 83.97055], apex: [3.40128 -3.46724 5.00431], dist: 79.40982153588138\n",
+      "DEBUG:LV.BaseMetricsComputations:[9] --> base: [1.57142 4.50230 83.87841], apex: [2.79415 -3.37342 4.88963], dist: 79.38985398245305\n",
+      "DEBUG:LV.BaseMetricsComputations:[10] --> base: [1.43649 4.30637 83.80836], apex: [2.31790 -3.30282 4.77129], dist: 79.40739923565825\n",
+      "DEBUG:LV.BaseMetricsComputations:[11] --> base: [1.31705 4.14169 83.76776], apex: [1.96163 -3.27280 4.66151], dist: 79.45557911411056\n",
+      "DEBUG:LV.BaseMetricsComputations:[12] --> base: [1.22417 4.02159 83.74996], apex: [1.73790 -3.31097 4.58030], dist: 79.51015490464951\n",
+      "DEBUG:LV.BaseMetricsComputations:[13] --> base: [1.16308 3.94227 83.74736], apex: [1.61665 -3.39894 4.50679], dist: 79.58119356623682\n",
+      "DEBUG:LV.BaseMetricsComputations:[14] --> base: [1.11143 3.86799 83.75125], apex: [1.54871 -3.50868 4.43638], dist: 79.65836870456866\n",
+      "DEBUG:LV.BaseMetricsComputations:[15] --> base: [1.07033 3.79221 83.75707], apex: [1.50755 -3.61051 4.36000], dist: 79.74262777868353\n",
+      "DEBUG:LV.BaseMetricsComputations:[16] --> base: [1.03155 3.72702 83.76342], apex: [1.55930 -3.70460 4.28771], dist: 79.82416289943828\n",
+      "DEBUG:LV.BaseMetricsComputations:[17] --> base: [0.99823 3.66712 83.77012], apex: [1.56020 -3.78727 4.21018], dist: 79.91037348893413\n",
+      "DEBUG:LV.BaseMetricsComputations:[18] --> base: [0.96884 3.61518 83.77680], apex: [1.57991 -3.86260 4.13626], dist: 79.99315873575317\n",
+      "DEBUG:LV.BaseMetricsComputations:[19] --> base: [0.94623 3.56698 83.78348], apex: [1.60924 -3.92938 4.05883], dist: 80.07905229495407\n",
+      "DEBUG:LV.BaseMetricsComputations:[20] --> base: [0.92446 3.52493 83.79038], apex: [1.65189 -3.99049 3.98515], dist: 80.16162644401636\n",
+      "DEBUG:LV.BaseMetricsComputations:[21] --> base: [0.90584 3.48557 83.79799], apex: [1.69982 -4.04569 3.90955], dist: 80.24657456043802\n",
+      "DEBUG:LV.BaseMetricsComputations:[22] --> base: [0.89100 3.45100 83.80542], apex: [1.75594 -4.09681 3.83788], dist: 80.32761381886442\n",
+      "DEBUG:LV.BaseMetricsComputations:[23] --> base: [0.87937 3.41834 83.81274], apex: [1.81371 -4.14386 3.76547], dist: 80.40911078673147\n",
+      "DEBUG:LV.BaseMetricsComputations:[24] --> base: [0.86751 3.38945 83.81988], apex: [1.87566 -4.18783 3.69698], dist: 80.48671148946302\n",
+      "DEBUG:LV.BaseMetricsComputations:[25] --> base: [0.85502 3.36190 83.82688], apex: [1.93669 -4.22890 3.62850], dist: 80.56407850197657\n",
+      "DEBUG:LV.BaseMetricsComputations:[26] --> base: [0.83728 3.33735 83.83371], apex: [1.99925 -4.26754 3.56376], dist: 80.63776802587468\n",
+      "DEBUG:LV.BaseMetricsComputations:[27] --> base: [0.81956 3.31373 83.84039], apex: [2.05945 -4.30401 3.49944], dist: 80.71080776962657\n",
+      "DEBUG:LV.BaseMetricsComputations:[28] --> base: [0.80240 3.29254 83.84458], apex: [1.96672 -4.34028 3.36473], dist: 80.84937816583636\n",
+      "DEBUG:LV.BaseMetricsComputations:[29] --> base: [0.78655 3.27202 83.84697], apex: [2.01640 -4.37612 3.30105], dist: 80.91755447283519\n",
+      "DEBUG:LV.BaseMetricsComputations:[30] --> base: [0.77111 3.25350 83.85351], apex: [2.06553 -4.41019 3.24058], dist: 80.9867463464135\n",
+      "DEBUG:LV.BaseMetricsComputations:[31] --> base: [0.75670 3.23545 83.86154], apex: [2.11166 -4.44284 3.18092], dist: 81.05649043185544\n",
+      "DEBUG:LV.BaseMetricsComputations:[32] --> base: [0.74333 3.21908 83.86933], apex: [2.15689 -4.47399 3.12414], dist: 81.12316671261426\n",
+      "DEBUG:LV.BaseMetricsComputations:[33] --> base: [0.73181 3.20305 83.87700], apex: [2.19924 -4.50400 3.06818], dist: 81.1887779452064\n",
+      "DEBUG:LV.BaseMetricsComputations:[34] --> base: [0.72035 3.18844 83.88256], apex: [2.24057 -4.53272 3.01478], dist: 81.24977607505305\n",
+      "DEBUG:LV.BaseMetricsComputations:[35] --> base: [0.70953 3.17408 83.88796], apex: [2.27923 -4.56051 2.96217], dist: 81.30972439120897\n",
+      "DEBUG:LV.BaseMetricsComputations:[36] --> base: [0.69875 3.16095 83.89323], apex: [2.31687 -4.58718 2.91184], dist: 81.36729929520371\n",
+      "DEBUG:LV.BaseMetricsComputations:[37] --> base: [0.68850 3.14799 83.89835], apex: [2.35208 -4.61307 2.86227], dist: 81.42388088895423\n",
+      "DEBUG:LV.BaseMetricsComputations:[38] --> base: [0.67826 3.13611 83.90335], apex: [2.57058 -4.96665 2.81627], dist: 81.51288432102402\n",
+      "DEBUG:LV.BaseMetricsComputations:[39] --> base: [0.66847 3.12434 83.90820], apex: [2.60545 -4.98879 2.77093], dist: 81.56489675264964\n",
+      "DEBUG:LV.BaseMetricsComputations:[40] --> base: [0.65868 3.11353 83.91294], apex: [2.63934 -5.01011 2.72736], dist: 81.61504809119174\n",
+      "DEBUG:LV.BaseMetricsComputations:[41] --> base: [0.64928 3.10279 83.91755], apex: [2.67122 -5.03090 2.68440], dist: 81.66437244380845\n",
+      "DEBUG:LV.BaseMetricsComputations:[42] --> base: [0.63986 3.09289 83.92206], apex: [2.70219 -5.05097 2.64303], dist: 81.71202425681753\n",
+      "DEBUG:LV.BaseMetricsComputations:[43] --> base: [0.63077 3.08304 83.92643], apex: [2.73134 -5.07058 2.60224], dist: 81.75890365670227\n",
+      "DEBUG:LV.BaseMetricsComputations:[44] --> base: [0.62167 3.07394 83.93071], apex: [2.56308 -5.08953 2.56287], dist: 81.79937335570494\n",
+      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_1'\n",
+      "DEBUG:LV.BaseMetricsComputations:Computing longitudinal distance for nodeset: '2' with approach: 'estimate_apex_base'.\n",
+      "DEBUG:LV.BaseMetricsComputations:Using default base region for base centroid estimation: 23\n",
+      "DEBUG:LV.BaseMetricsComputations:[0] --> base: [2.34924 4.06628 84.85166], apex: [-3.58723 1.55821 0.05999], dist: 85.03622131824154\n",
+      "DEBUG:LV.BaseMetricsComputations:[1] --> base: [1.54996 3.90157 84.41967], apex: [-2.86425 1.63697 -0.12901], dist: 84.69411017130048\n",
+      "DEBUG:LV.BaseMetricsComputations:[2] --> base: [1.10615 3.75960 84.27781], apex: [-1.94595 1.32559 -0.58696], dist: 84.95450444462382\n",
+      "DEBUG:LV.BaseMetricsComputations:[3] --> base: [1.40904 4.14930 84.13543], apex: [-1.33591 0.38765 -1.30215], dist: 85.56439599480461\n",
+      "DEBUG:LV.BaseMetricsComputations:[4] --> base: [1.75487 5.34419 84.00272], apex: [1.63447 -0.36954 -1.05370], dist: 85.24819322901308\n",
+      "DEBUG:LV.BaseMetricsComputations:[5] --> base: [1.93810 5.67218 84.09136], apex: [4.42910 -0.54068 -0.82134], dist: 85.17612103951048\n",
+      "DEBUG:LV.BaseMetricsComputations:[6] --> base: [1.93863 5.53376 84.16232], apex: [4.55692 -1.20624 -0.82904], dist: 85.29837985684941\n",
+      "DEBUG:LV.BaseMetricsComputations:[7] --> base: [1.82682 5.12732 84.07675], apex: [3.83468 -1.36263 -0.99739], dist: 85.34494975267654\n",
+      "DEBUG:LV.BaseMetricsComputations:[8] --> base: [1.70198 4.74035 83.97055], apex: [3.12187 -1.26744 -1.16330], dist: 85.35738460023848\n",
+      "DEBUG:LV.BaseMetricsComputations:[9] --> base: [1.57142 4.50230 83.87841], apex: [2.52722 -1.17492 -1.28672], dist: 85.35949459918501\n",
+      "DEBUG:LV.BaseMetricsComputations:[10] --> base: [1.43649 4.30637 83.80836], apex: [2.06934 -1.11544 -1.41589], dist: 85.39888789294844\n",
+      "DEBUG:LV.BaseMetricsComputations:[11] --> base: [1.31705 4.14169 83.76776], apex: [1.72894 -1.10101 -1.53790], dist: 85.4676091421535\n",
+      "DEBUG:LV.BaseMetricsComputations:[12] --> base: [1.22417 4.02159 83.74996], apex: [1.51543 -1.16262 -1.63345], dist: 85.54113804019568\n",
+      "DEBUG:LV.BaseMetricsComputations:[13] --> base: [1.16308 3.94227 83.74736], apex: [1.39594 -1.27891 -1.72260], dist: 85.62960114924115\n",
+      "DEBUG:LV.BaseMetricsComputations:[14] --> base: [1.11143 3.86799 83.75125], apex: [1.32636 -1.41963 -1.80965], dist: 85.7244029492454\n",
+      "DEBUG:LV.BaseMetricsComputations:[15] --> base: [1.07033 3.79221 83.75707], apex: [1.28117 -1.55219 -1.90237], dist: 85.82626010447369\n",
+      "DEBUG:LV.BaseMetricsComputations:[16] --> base: [1.03155 3.72702 83.76342], apex: [1.26311 -1.67731 -1.99070], dist: 85.92455997323916\n",
+      "DEBUG:LV.BaseMetricsComputations:[17] --> base: [0.99823 3.66712 83.77012], apex: [1.25823 -1.79032 -2.08386], dist: 86.02765361359629\n",
+      "DEBUG:LV.BaseMetricsComputations:[18] --> base: [0.96884 3.61518 83.77680], apex: [1.27412 -1.89586 -2.17299], dist: 86.12682587854398\n",
+      "DEBUG:LV.BaseMetricsComputations:[19] --> base: [0.94623 3.56698 83.78348], apex: [1.29888 -1.99214 -2.26520], dist: 86.22878771893626\n",
+      "DEBUG:LV.BaseMetricsComputations:[20] --> base: [0.92446 3.52493 83.79038], apex: [1.33880 -2.08237 -2.35315], dist: 86.32683163854338\n",
+      "DEBUG:LV.BaseMetricsComputations:[21] --> base: [0.90584 3.48557 83.79799], apex: [1.38343 -2.16595 -2.44255], dist: 86.42683530403937\n",
+      "DEBUG:LV.BaseMetricsComputations:[22] --> base: [0.89100 3.45100 83.80542], apex: [1.43773 -2.24485 -2.52743], dist: 86.52226990573824\n",
+      "DEBUG:LV.BaseMetricsComputations:[23] --> base: [0.87937 3.41834 83.81274], apex: [1.49311 -2.31891 -2.61257], dist: 86.6177077482871\n",
+      "DEBUG:LV.BaseMetricsComputations:[24] --> base: [0.86751 3.38945 83.81988], apex: [1.55378 -2.38916 -2.69317], dist: 86.70854550886816\n",
+      "DEBUG:LV.BaseMetricsComputations:[25] --> base: [0.85502 3.36190 83.82688], apex: [1.61291 -2.45572 -2.77329], dist: 86.79866764065723\n",
+      "DEBUG:LV.BaseMetricsComputations:[26] --> base: [0.83728 3.33735 83.83371], apex: [1.67438 -2.51903 -2.84905], dist: 86.8844045536131\n",
+      "DEBUG:LV.BaseMetricsComputations:[27] --> base: [0.81956 3.31373 83.84039], apex: [1.73288 -2.57940 -2.92395], dist: 86.96903272538083\n",
+      "DEBUG:LV.BaseMetricsComputations:[28] --> base: [0.80240 3.29254 83.84458], apex: [1.79201 -2.63694 -2.99482], dist: 87.04722140886689\n",
+      "DEBUG:LV.BaseMetricsComputations:[29] --> base: [0.78655 3.27202 83.84697], apex: [1.84760 -2.69207 -3.06466], dist: 87.12247991215902\n",
+      "DEBUG:LV.BaseMetricsComputations:[30] --> base: [0.77111 3.25350 83.85351], apex: [1.90295 -2.74473 -3.13085], dist: 87.19827895788086\n",
+      "DEBUG:LV.BaseMetricsComputations:[31] --> base: [0.75670 3.23545 83.86154], apex: [1.95469 -2.79540 -3.19599], dist: 87.27439705380785\n",
+      "DEBUG:LV.BaseMetricsComputations:[32] --> base: [0.74333 3.21908 83.86933], apex: [2.00577 -2.84391 -3.25785], dist: 87.34701205854803\n",
+      "DEBUG:LV.BaseMetricsComputations:[33] --> base: [0.73181 3.20305 83.87700], apex: [2.05342 -2.89076 -3.31869], dist: 87.41835686878916\n",
+      "DEBUG:LV.BaseMetricsComputations:[34] --> base: [0.72035 3.18844 83.88256], apex: [2.10025 -2.93570 -3.37660], dist: 87.48468911933435\n",
+      "DEBUG:LV.BaseMetricsComputations:[35] --> base: [0.70953 3.17408 83.88796], apex: [2.14392 -2.97926 -3.43354], dist: 87.54979390300034\n",
+      "DEBUG:LV.BaseMetricsComputations:[36] --> base: [0.69875 3.16095 83.89323], apex: [2.18671 -3.02113 -3.48788], dist: 87.61216689731451\n",
+      "DEBUG:LV.BaseMetricsComputations:[37] --> base: [0.68850 3.14799 83.89835], apex: [2.22666 -3.06181 -3.54132], dist: 87.67339288811824\n",
+      "DEBUG:LV.BaseMetricsComputations:[38] --> base: [0.67826 3.13611 83.90335], apex: [2.26576 -3.10101 -3.59243], dist: 87.73217008307657\n",
+      "DEBUG:LV.BaseMetricsComputations:[39] --> base: [0.66847 3.12434 83.90820], apex: [2.30228 -3.13919 -3.64271], dist: 87.78988369499807\n",
+      "DEBUG:LV.BaseMetricsComputations:[40] --> base: [0.65868 3.11353 83.91294], apex: [2.33800 -3.17602 -3.69091], dist: 87.8453957106224\n",
+      "DEBUG:LV.BaseMetricsComputations:[41] --> base: [0.64928 3.10279 83.91755], apex: [2.37142 -3.21198 -3.73834], dist: 87.89992346259089\n",
+      "DEBUG:LV.BaseMetricsComputations:[42] --> base: [0.63986 3.09289 83.92206], apex: [2.40409 -3.24674 -3.78389], dist: 87.95247052457877\n",
+      "DEBUG:LV.BaseMetricsComputations:[43] --> base: [0.63077 3.08304 83.92643], apex: [2.43470 -3.28072 -3.82875], dist: 88.00410835228607\n",
+      "DEBUG:LV.BaseMetricsComputations:[44] --> base: [0.62167 3.07394 83.93071], apex: [2.46462 -3.31360 -3.87192], dist: 88.0539561052722\n",
+      "INFO:LV.BaseMetricsComputations:State key added:'longitudinal_distance_2'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([82.90197, 82.27652, 82.32762, 82.80410, 82.32607, 82.24528,\n",
+       "       82.35468, 82.38567, 82.38360, 82.37467, 82.40314, 82.46159,\n",
+       "       82.52565, 82.60540, 82.69139, 82.78444, 82.87436, 82.96901,\n",
+       "       83.05999, 83.15392, 83.24423, 83.33670, 83.42494, 83.51341,\n",
+       "       83.59763, 83.68137, 83.76109, 83.83992, 83.94830, 84.02002,\n",
+       "       84.09251, 84.16544, 84.23509, 84.30357, 84.36723, 84.42976,\n",
+       "       84.48973, 84.54864, 84.62253, 84.67739, 84.73022, 84.78215,\n",
+       "       84.83225, 84.88151, 84.92666])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lds = lv_typeA.longitudinal_distances(\n",
     "    recompute=True,\n",
